Segunda semana de proyecto

--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -12,6 +12,6 @@
 	<br>
 	<tr>
 		<td>&nbsp;</td>
-		<td id="button"><%= f.submit 'Save' %></td>
+		<td><%= f.submit 'Save' %></td>
 	</tr>
 <% end %>
