--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -11,7 +11,12 @@
 	</tr>
 	<br>
 	<tr>
+		<td><%= f.label :category %></td>
+		<td><%= f.text_field :category %></td>
+	</tr>
+	<br>
+	<tr>
 		<td>&nbsp;</td>
-		<td id="button"><%= f.submit 'Save' %></td>
+		<td><%= f.submit 'Save' %></td>
 	</tr>
 <% end %>
