--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -14,11 +14,15 @@
 			Cantidad necesaria: 
 			<%= ingredient.necessary_amount %>
 		</li>
+
+		<li type="square">
+			Unidad de medida: 
+			<%= ingredient.unit_of_measure %>
+		</li>
 	</ul>
 	</li>
 	</br>
 	<% end %>
-
 </ul>
 
 <p>
