--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,16 +1,86 @@
-<h1> Index - The foods</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="menu_style.css">
+        <title>Menu Generator</title>
+    </head>
+
+    <body>
+	<div class="container-fluid barra">
+    	<nav class="navbar navbar-default borde_barra">
+  	
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+    	<!--esto se puede quitar-->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><p class="titulo">Menús 2.0</p></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-center" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/recipes">Inicio <span class="sr-only">(current)</span></a></li>
+        <li><a href="/recipes">Recetas <span class="sr-only">(current)</span></a></li>
+      </ul> <!-- /.nav navbar-nav -->
+      <div class="navbar-form navbar-left" role="search">
+       <%= form_tag(search_foods_path, method: 'get') do %> 
+       <div class="form-group">
+          <%= text_field_tag :search, params[:search], :placeholder => "Buscar", 
+          class: "form-control" %>
+        </div>
+        <%= submit_tag 'Buscar', class: "btn btn-default" %>
+     	 <% end %>
+      </div>
+      <div class="navbar-form navbar-right">	
+      <button type="button" class="btn btn-default btn-md">
+  		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> <%= link_to 'Nuevo alimento', new_food_path %> 
+		</button>
+
+      </div>
+    </div><!-- /.navbar-collapse -->
+  		</nav>
+    </div><!-- /.container-fluid -->
+
+<!--<h1> Index - The foods</h1>
 <p>
 	<%= link_to 'Back home', '/' %>
-</p>
-<ul>
-	<% @foods.each do |food| %>
-		<li><%= link_to (food.name), food_path(food) %>
-			<% if food.name.present? %>
-						
-			<% end %>
-		</li>
-	<% end %>
-</ul>
+</p>-->
+
+<div class="container containerfirst">
+          <div class="row rowfirst">
+            <div id="columnas" class="col-md-12 col-xs-12">
+              <ul>
+              	<% @foods.each do |food| %>
+
+              		<li class="col-md-3 col-xs-3" type="none">
+                    <div class=" zoom_f">
+                      <%= link_to food_path(food) do %>
+              			<%= image_tag food.image, :class => 'img_foods zoom_f' %>
+                    <% end %>
+                  </div>
+              			<%= link_to (food.name), food_path(food) %>
+              			
+              			<% if food.name.present? %>
+              	
+              			<% end %>
+              		</li>
+
+              	<% end %>
+              </ul>
+            </div>
+          </div>
+</div>
+<!--
 <p>
 	<%= link_to 'New food', new_food_path %>
 </p>
+-->
+</body>
+</html>
+
