--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,24 +1,109 @@
-<h1> Index - The recipes</h1>
-<%= form_tag(search_recipes_path, method: 'get') do %>
-	<p>
-	   <%= text_field_tag :search, params[:search] %>
-	   <%= submit_tag 'Search' %>
-	</p>
-<% end %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="menu_style.css">
+        <title>Menu Generator</title>
+    </head>
 
+    <body>
+	<div class="container-fluid barra">
+    	<nav class="navbar navbar-default borde_barra">
+  	
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+    	<!--esto se puede quitar-->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><p class="titulo">Menús 2.0</p></a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-center" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/recipes">Inicio <span class="sr-only">(current)</span></a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categorias <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/recipes/category?category=Primeros">Primeros</a></li>
+            <li class="divider"></li>
+            <li><a href="/recipes/category?category=Segundos">Segundos</a></li>
+            <li class="divider"></li>
+            <li><a href="/recipes/category?category=Postres">Postres</a></li>
+          </ul>
+        </li> <!-- /.class dropdown -->
+        <li><a href="/foods">Alimentos <span class="sr-only">(current)</span></a></li>
+        <li><a href="/recipes/rand_recipe">Seleccionar plato <span class="sr-only">(current)</span></a></li>
+      </ul> <!-- /.nav navbar-nav -->
+
+      <div class="navbar-form navbar-left" role="search">
+       <%= form_tag(search_recipes_path, method: 'get') do %> 
+       <div class="form-group">
+          <%= text_field_tag :search, params[:search], :placeholder => "Buscar", 
+          class: "form-control" %>
+        </div>
+        <%= submit_tag 'Buscar', class: "btn btn-default" %>
+     	 <% end %>
+      </div>
+      <div class="navbar-form navbar-right">	
+      <button type="button" class="btn btn-default btn-md">
+  		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> <%= link_to 'Nueva receta', new_recipe_path %> 
+		</button>
+
+      </div>
+    </div><!-- /.navbar-collapse -->
+  		</nav>
+    </div><!-- /.container-fluid -->
+
+<!--<h1> Index - The recipes</h1>-->
+
+<!--
 <p>
 	<%= link_to 'Back home', '/' %>
 </p>
-<ul>
-	<% @recipes.each do |recipe| %>
-		<li><%= link_to (recipe.name), recipe_path(recipe) %>
-			<% if recipe.name.present? %>
-						
-			<% end %>
-		</li>
-	<% end %>
-</ul>
+-->
+
+<div class="container containerfirst">
+          <div class="row rowfirst">
+          	<div id="columnas" class="col-md-2 col-xs-2">
+          		<div class="list-group">
+                <a href="#" id="category" class="list-group-item disabled">Categorias</a>
+				  <a href="/recipes/category?category=Primeros" class="list-group-item">Primeros</a>
+				  <a href="/recipes/category?category=Segundos" class="list-group-item">Segundos</a>
+				  <a href="/recipes/category?category=Postres" class="list-group-item">Postres</a>
+				</div>
+          	</div>
+            <div id="columnas" class="col-md-10 col-xs-10">
+				<ul>
+					<% @recipes.each do |recipe| %>
+						<li class="col-md-5 col-xs-5" type="none">
+              <div id="columnas" class=" zoom_r">
+                <%= link_to recipe_path(recipe) do %>
+							   <%= image_tag recipe.image, :class => 'img_recipes zoom_r' %>
+                 <% end %>
+              </div>
+             
+							<%= link_to (recipe.name), recipe_path(recipe) %>
+							
+							<% if recipe.name.present? %>
+										
+							<% end %>
+							
+						</li>
+
+					<% end %>
+				</ul>
+			</div>
+		 </div>
+</div>
+<!--
 <p>
 	<%= link_to 'New recipe', new_recipe_path %>
 </p>
+-->
+</body>
+</html>
