--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,20 +1,116 @@
-<h1>Show every recipes</h1>
-<h3><%= @recipes.name %></h3>
-<h5>Category: <%= @recipes.category %></h5>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="menu_style.css">
+        <title>Menu Generator</title>
+    </head>
 
-<%= link_to 'Lista de ingredientes', recipe_ingredients_path(@recipes) %>
-	<ul>
-		<li>Preparación:
-			<br>
-			<%= @recipes.preparation %></li>
-		</br>
-	</ul>
+    <body>
+	<div class="container-fluid barra">
+    	<nav class="navbar navbar-default borde_barra">
+  	
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+    	<!--esto se puede quitar-->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><p class="titulo">Menús 2.0</p></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-center" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/recipes">Inicio <span class="sr-only">(current)</span></a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categorias <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/recipes/category?category=Primeros">Primeros</a></li>
+            <li class="divider"></li>
+            <li><a href="/recipes/category?category=Segundos">Segundos</a></li>
+            <li class="divider"></li>
+            <li><a href="/recipes/category?category=Postres">Postres</a></li>
+          </ul>
+        </li> <!-- /.class dropdown -->
+        <li><a href="/foods">Alimentos <span class="sr-only">(current)</span></a></li>
+      </ul> <!-- /.nav navbar-nav -->
+
+      <div class="navbar-form navbar-left" role="search">
+       <%= form_tag(search_recipes_path, method: 'get') do %> 
+       <div class="form-group">
+          <%= text_field_tag :search, params[:search], :placeholder => "Buscar", 
+          class: "form-control" %>
+        </div>
+        <%= submit_tag 'Buscar', class: "btn btn-default" %>
+     	 <% end %>
+      </div>
+      <div class="navbar-form navbar-right">	
+      <button type="button" class="btn btn-default btn-md">
+  		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> <%= link_to 'Nueva receta', new_recipe_path %> 
+		</button>
+
+      </div>
+    </div><!-- /.navbar-collapse -->
+  		</nav>
+    </div><!-- /.container-fluid -->
+
+<!--<h1>Show every recipes</h1>-->
+
+<ol class="breadcrumb">
+  <li><a href="/recipes">Inicio</a></li>
+  <li><a href="/recipes/category?category"><%= @recipe.category %></a></li>
+  <li class="active"><%= @recipe.name %></li>
+</ol>
+
+<div class="container containerfirst">
+          <div class="row rowfirst">
+            <div id="columnas" class="col-md-7 col-xs-7">
+				<p class="nombres_recipes"><%= @recipe.name %></p>
+        <div class="agrupar_propiedades">
+          <div class="formato_propiedades_recipes">Personas: <span class="contenido_propiedades_recipes"><%= @recipe.number_of_people %></span></div>
+         
+				<p class="formato_propiedades_recipes">Tiempo de preparación: <%= @recipe.preparation_time %></p>
+        
+        <p class="formato_propiedades_recipes">Tiempo de cocinado: <%= @recipe.cooking_time %></p>
+        <p class="formato_propiedades_recipes">Dificultad: <%= @recipe.difficulty %></p>
+        <p class="formato_propiedades_recipes">Categoria: <%= @recipe.category %></p>
+
+				<p class="formato_propiedades_recipes">Ingredientes:</p>
+				<ul>
+					<% @ingredients.each do |ingredient| %>
+						<li class="contenido_propiedades_recipes" type="none">
+							<%= ingredient.necessary_amount %> 
+              <%= ingredient.unit_of_measure %>
+							<% food = Food.find ingredient.food_id %>
+							<%= food.name %>
+						</li>
+						
+					<% end %>
+				</ul>
+
+				<p class="formato_propiedades_recipes">Preparación:</p>
+
+  				<ul class="texto_preparacion">	
+  					<li  type="none"><%= simple_format @recipe.preparation %></li>	
+  				</ul>
+          </div>
+				</div>
 
 
-<p>
-	<%= link_to 'Añadir ingredientes para esta receta', new_recipe_ingredient_path(@recipes) %>
-</p>
+					   <%= image_tag @recipe.image, :class => 'img_recipes_show' %>
+             
+        
+            <div class="add_ingredients"> 
+              <%= link_to 'Añadir ingredientes a esta receta', new_recipe_ingredient_path(@recipe) %>
+            </div>
+		</div>
+</div>
 
-<p>
-	<%= link_to 'Back to list of recipes', recipes_path %>
-</p>
+
+
+</body>
+</html>
