--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
 
 <footer>
 		<hr>
-		Created by Berta Minguela ® Ironhack 2015
+		<div class="color">
+			Created by Berta Minguela ® Ironhack 2015
+		</div>
 </footer>
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
