--- a/app/assets/stylesheets/menu_style.css
+++ b/app/assets/stylesheets/menu_style.css
@@ -1,76 +1,52 @@
-body{
-margin-left: 1px;	
-}
-.barra{
-	margin: 0 !important;
+body{margin-left: 1px;
+background-image: url(contemporary_china_2.png)}
+
+.barra{margin: 0 !important;
 	padding: 0 !important;
-	width: 100%;
-}
-.borde_barra{
-	border-radius: 15px;
-}
+	width: 100%;}
+
+.borde_barra{border-radius: 15px;}
+
 .titulo{font-family: "Vivaldi";
 font-size: 35px;
 font-weight: bold;
 color: #402a12;}
 
-header{
-	width: 98%;
+.margen_lista{margin-top: -42px;
+padding-bottom: 2000px;
+-webkit-box-shadow: 15px 15px 22px -8px rgba(87,84,87,1);
+-moz-box-shadow: 15px 15px 22px -8px rgba(87,84,87,1);
+box-shadow: 15px 15px 22px -8px rgba(87,84,87,1);}
+
+.list-group{width: 160px;
+		margin-left: 20px;
+		margin-top: 42px;}
+
+header{width: 98%;
 	font-size: 15px;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	text-align: center;
-	font-weight: lighter;
-}
+	font-weight: lighter;}
+
 .principal{margin-top: -55px;}
 
-#columnas{
-	font-size: 20px;
-	text-align: center;
-}
+#columnas{font-size: 20px;
+	text-align: center;}
 
 .img_foods{width: 100px;
 			margin-bottom: 11px;
-			border-radius: 50%;
-}
+			border-radius: 50%;}
 
-.zoom_f{
-		transition: 1.5s ease;
- 		-moz-transition: 1.5s ease; /* Firefox */
- 		-webkit-transition: 1.5s ease; /* Chrome - Safari */
- 		-o-transition: 1.5s ease; /* Opera */
-}
-.zoom_f:hover{
-		transform : scale(1);
-		-moz-transform : scale(1); /* Firefox */
-		-webkit-transform : scale(1); /* Chrome - Safari */
-		-o-transform : scale(1); /* Opera */
-		-ms-transform : scale(1); /* IE9 */
-}
-
-.img_recipes{width: 180px;
+.img_recipes{width: 150px;
 			margin-top: 25px;
-			margin-bottom: 27px;
-			border-radius: 10%;
-}
+			margin-bottom: 10px;
+			border-radius: 50%;}
 
-.zoom_r{
-		transition: 1.5s ease;
- 		-moz-transition: 1.5s ease; /* Firefox */
- 		-webkit-transition: 1.5s ease; /* Chrome - Safari */
- 		-o-transition: 1.5s ease; /* Opera */
-}
-.zoom_r:hover{
-		transform : scale(1.2);
-		-moz-transform : scale(1.2); /* Firefox */
-		-webkit-transform : scale(1.2); /* Chrome - Safari */
-		-o-transform : scale(1.2); /* Opera */
-		-ms-transform : scale(1.2); /* IE9 */
-}
-
-.breadcrumb{background-color: white;
+.breadcrumb{background-color: transparent;
 			margin-left: 50px}
 
+/* nombre del alimento */
 .nombres_food{font-size: 40px;
 		font-weight: lighter;
 		font-family: 'Lora', serif;
@@ -78,76 +54,70 @@ header{
 		text-indent: -100px;
 		margin-left: 70px;}
 
+/* nombre del atributo */
 .propiedades_food{font-size: 20px;
 			font-family: 'Bree Serif', serif;
-			margin-left: 70px;}
+			margin-left: 80px;}
+
+.contenido_propiedades_food{font-weight: bold;}
 
 .img_foods_show{width:200px;
 	border-radius: 10%;
 	margin-left: 70px;}
 
+/* nombre de la receta */
 .nombres_recipes{font-size: 40px;
 		font-weight: lighter;
 		font-family: 'Lora', serif;
-		font-style: italic;		
-}
+		font-style: italic;}
 
-.formato_propiedades_recipes{font-size: 18px;
+/* nombre del atributo */
+.formato_propiedades_recipes{font-size: 16px;
 			font-family: 'Bree Serif', serif;
 			text-align: left;
 			margin-left: 70px;
-			font-weight: bold;
+			font-weight: normal;
+			margin-bottom: 5px;}
 
-}
-.agrupar_propiedades{margin-left: 10px;}
-
-.contenido_propiedades_recipes{font-size: 16px;
+/* contenido del atributo */
+.contenido_propiedades_recipes{font-size: 18px;
 			font-family: 'Bree Serif', serif;
 			text-indent: -380px;
-			font-weight: normal;
-}
+			font-weight: bold;}
+
+/* lista de ingredientes de la receta */
+.lista_ingredientes{text-align: left;
+	margin-left: 442px;}
+
+/* preparacion de la receta */
 .texto_preparacion{text-align: justify;
 			font-size: 16px;
 			font-family: 'Bree Serif', serif;
-			margin-left: 62px;
-}
+			margin-left: 62px;}
 
 .img_recipes_show{margin-top: 50px;
 	width:300px;
-	border-radius: 10%;
+	border-radius: 20%;
 	margin-left: 50px;}
 
-.rowfirst{
-	margin-top: 20px;
-}
+.rowfirst{margin-top: 20px;}
 
-#category{
-	font-weight: bold;
-}
+#category{font-weight: bold;}
 
-.form_new{margin-top: 50px;
-}
+.form_new{margin-top: 50px;}
 
 .campos{text-align: left;
 	margin-left: 350px;
-	padding: 2px;}
+	padding: 2px;
+	/*font-size: 17px;*/}
 
 .boton{text-align: right;
 margin-right: 365px;}
 
-.zoom_r{
-		transition: 1.5s ease;
- 		-moz-transition: 1.5s ease; /* Firefox */
- 		-webkit-transition: 1.5s ease; /* Chrome - Safari */
- 		-o-transition: 1.5s ease; /* Opera */
-}
-.zoom_f:hover{
-		transform : scale(1.2);
-		-moz-transform : scale(1.2); /* Firefox */
-		-webkit-transform : scale(1.2); /* Chrome - Safari */
-		-o-transform : scale(1.2); /* Opera */
-		-ms-transform : scale(1.2); /* IE9 */
-}
-
 .add_ingredients{margin-top: 18px;
-				text-align: center;}
+				margin-right: 125px;}
+
+.color_boton{background-color: #F8F8F8;}
+
+.hacer_receta{margin-top: 80px;
+	padding-right: 220px;}
